force-app/main/default/objects/Applicant__c/fields/Aadhar_Number__c.field-meta.xml
<CustomField>
    <fullName>Aadhar_Number__c</fullName>
    <label>Aadhar Number</label>
    <length>200</length>
    <type>Text</type>
</CustomField>