force-app/main/default/objects/Applicant__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <label>City</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>State__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Adoni</fullName>
            </value>
            <value>
                <fullName>Amaravati</fullName>
            </value>
            <value>
                <fullName>Anantapur</fullName>
            </value>
            <value>
                <fullName>Chandragiri</fullName>
            </value>
            <value>
                <fullName>Chittoor</fullName>
            </value>
            <value>
                <fullName>Dowlaiswaram</fullName>
            </value>
            <value>
                <fullName>Eluru</fullName>
            </value>
            <value>
                <fullName>Guntur</fullName>
            </value>
            <value>
                <fullName>Kadapa</fullName>
            </value>
            <value>
                <fullName>Kakinada</fullName>
            </value>
            <value>
                <fullName>Kurnool</fullName>
            </value>
            <value>
                <fullName>Machilipatnam</fullName>
            </value>
            <value>
                <fullName>Nagarjunakoṇḍa</fullName>
            </value>
            <value>
                <fullName>Rajahmundry</fullName>
            </value>
            <value>
                <fullName>Srikakulam</fullName>
            </value>
            <value>
                <fullName>Tirupati</fullName>
            </value>
            <value>
                <fullName>Vijayawada</fullName>
            </value>
            <value>
                <fullName>Visakhapatnam</fullName>
            </value>
            <value>
                <fullName>Vizianagaram</fullName>
            </value>
            <value>
                <fullName>Yemmiganur</fullName>
            </value>
            <value>
                <fullName>Itanagar</fullName>
            </value>
            <value>
                <fullName>Dhuburi</fullName>
            </value>
            <value>
                <fullName>Dibrugarh</fullName>
            </value>
            <value>
                <fullName>Dispur</fullName>
            </value>
            <value>
                <fullName>Guwahati</fullName>
            </value>
            <value>
                <fullName>Jorhat</fullName>
            </value>
            <value>
                <fullName>Nagaon</fullName>
            </value>
            <value>
                <fullName>Sivasagar</fullName>
            </value>
            <value>
                <fullName>Silchar</fullName>
            </value>
            <value>
                <fullName>Tezpur</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>