force-app/main/default/objects/Applicant__c/fields/Father_Spouse_Name__c.field-meta.xml
<CustomField>
    <fullName>Father_Spouse_Name__c</fullName>
    <label>Father / Spouse Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>