force-app/main/default/objects/Applicant__c/fields/Mailing_City__c.field-meta.xml
<CustomField>
    <fullName>Mailing_City__c</fullName>
    <label>Mailing City</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Mailing_State__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Abu</fullName>
            </value>
            <value>
                <fullName>Adoni</fullName>
            </value>
            <value>
                <fullName>Agartala</fullName>
            </value>
            <value>
                <fullName>Agra</fullName>
            </value>
            <value>
                <fullName>Ahmadabad</fullName>
            </value>
            <value>
                <fullName>Ahmadnagar</fullName>
            </value>
            <value>
                <fullName>Ahmedabad</fullName>
            </value>
            <value>
                <fullName>Ahmednagar</fullName>
            </value>
            <value>
                <fullName>Aizawl</fullName>
            </value>
            <value>
                <fullName>Ajmer</fullName>
            </value>
            <value>
                <fullName>Akola</fullName>
            </value>
            <value>
                <fullName>Alappuzha</fullName>
            </value>
            <value>
                <fullName>Aligarh</fullName>
            </value>
            <value>
                <fullName>Alipore</fullName>
            </value>
            <value>
                <fullName>Alipur Duar</fullName>
            </value>
            <value>
                <fullName>Allahabad</fullName>
            </value>
            <value>
                <fullName>Almora</fullName>
            </value>
            <value>
                <fullName>Alwar</fullName>
            </value>
            <value>
                <fullName>Amaravati</fullName>
            </value>
            <value>
                <fullName>Ambala</fullName>
            </value>
            <value>
                <fullName>Ambattu</fullName>
            </value>
            <value>
                <fullName>Ambikapur</fullName>
            </value>
            <value>
                <fullName>Amer</fullName>
            </value>
            <value>
                <fullName>Amravati</fullName>
            </value>
            <value>
                <fullName>Amreli</fullName>
            </value>
            <value>
                <fullName>Amritsar</fullName>
            </value>
            <value>
                <fullName>Amroha</fullName>
            </value>
            <value>
                <fullName>Anantapur</fullName>
            </value>
            <value>
                <fullName>Anantnag</fullName>
            </value>
            <value>
                <fullName>Ara</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>