force-app/main/default/objects/Applicant__c/fields/Mailing_Country__c.field-meta.xml
<CustomField>
    <fullName>Mailing_Country__c</fullName>
    <label>Mailing Country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>India</fullName>
                <default>true</default>
                <label>India</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>