force-app/main/default/objects/Applicant__c/fields/PAN_Number__c.field-meta.xml
<CustomField>
    <fullName>PAN_Number__c</fullName>
    <label>PAN Number</label>
    <length>200</length>
    <type>Text</type>
</CustomField>