force-app/main/default/objects/Applicant__c/fields/Residential_Status__c.field-meta.xml
<CustomField>
    <fullName>Residential_Status__c</fullName>
    <label>Residential Status</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type_Of_Applicant__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>For Company</fullName>
            </value>
            <value>
                <fullName>Partnership Firm</fullName>
            </value>
            <value>
                <fullName>Mumbai Resident</fullName>
            </value>
            <value>
                <fullName>Non-Mumbai Resident</fullName>
            </value>
            <value>
                <fullName>Non-Resident Indian</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>